<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:transitionGroup="true"
    android:transitionName="info_screen"
    android:clipToPadding="false"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.LicensesFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:cardCornerRadius="18dp"
            app:strokeColor="@color/card_border"
            app:strokeWidth="2dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/betmrounded_regular"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/about_the_app"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@mipmap/ic_launcher_foreground"
                    android:contentDescription="@string/content_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/betmrounded_regular"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/app_name"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/betmrounded_light"
                    android:gravity="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="12dp"
                    android:text="@string/about_description"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:cardCornerRadius="18dp"
            app:strokeColor="@color/card_border"
            app:strokeWidth="2dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="18dp"
                    app:cardBackgroundColor="@color/white">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        app:srcCompat="@drawable/ic_default_monochrome"
                        android:layout_marginBottom="14dp"
                        android:layout_marginTop="14dp"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/betmrounded_light"
                    android:gravity="center|start"
                    android:layout_marginTop="4dp"
                    android:text="@string/nikola_drljaca"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="22sp" />

                <ImageButton
                    android:id="@+id/ib_git_nikola"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/github_logo"
                    android:contentDescription="@string/none"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/betmrounded_light"
                    android:gravity="center|start"
                    android:text="@string/ognjen_drljaca"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="22sp" />

                <ImageButton
                    android:id="@+id/ib_git_ognjen"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="12dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/github_logo"
                    android:contentDescription="@string/none"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="0dp"
            app:cardCornerRadius="18dp"
            app:strokeColor="@color/card_border"
            app:strokeWidth="2dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/betmrounded_regular"
                    android:gravity="center"
                    android:text="@string/support"
                    android:layout_marginTop="8dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/privacy_policy"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_report_bug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/report_a_bug"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/share"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/rate_this_app"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/support_development"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_licenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:text="@string/open_source_licenses"
                    android:layout_margin="10dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/selectableItemBackground"
                    android:padding="4dp"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>