<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="Quickie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/quickie_link" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="@string/coil_image_loading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="https://coil-kt.github.io/coil/getting_started/" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="@string/retrofit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="https://github.com/square/retrofit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="Lottie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="http://airbnb.io/lottie/#/android" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="Lottie Animation by Manoj Kumar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="https://lottiefiles.com/manoj61" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="Lottie Animation by Daniela Stella" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="https://lottiefiles.com/user/313969" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="@string/design" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/design_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:fontFamily="@font/betmrounded_light"
            android:textSize="16sp"
            android:text="@string/inspired_design" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="@font/betmrounded_regular"
            android:textSize="24sp"
            android:text="@string/epoxy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:autoLink="web"
            android:text="@string/epoxy_github" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
