<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.onboarding.OnboardingActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/betmrounded_regular"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/card_border"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintBottom_toTopOf="@id/text"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/qr_code_mobile_yellow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_lets_go"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/card_border"
        android:fontFamily="@font/betmrounded_regular"
        android:padding="16dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/background"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/background"
        app:strokeColor="@color/card_border"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        android:text="@string/onboarding_text"
        android:lineSpacingMultiplier="1.1"
        android:padding="24dp"
        android:gravity="center"
        android:fontFamily="@font/betmrounded_light"
        android:textColor="@color/card_border"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>